2009-04-13  Antti Koivisto  <antti@apple.com>

        Reviewed by Darin Adler.
        
        <rdar://problem/6740294> Increase the connection count per host

        * WebCoreSupport/WebSystemInterface.m:
        (InitWebCoreSystemInterface):

2009-04-13  Brady Eidson  <beidson@apple.com>

        Reviewed by Tim Hatcher

        Tweak my last check-in, moving the thread violation check up to the API-level calls so the logging is more
        useful to developers/users.

        * WebView/WebFrame.mm:
        (-[WebFrame _loadData:MIMEType:textEncodingName:baseURL:unreachableURL:]): If not on the main thread, only
          perform the "call on main thead" workaround, as the log/exception raising is now up at the API level.
        (-[WebFrame loadData:MIMEType:textEncodingName:baseURL:]): Perform a thread violation check here so logging
          is more meaningful.
        (-[WebFrame loadHTMLString:baseURL:]): Ditto.
        (-[WebFrame loadAlternateHTMLString:baseURL:forUnreachableURL:]): Ditto.

2009-04-13  Brady Eidson  <beidson@apple.com>

        Reviewed by Kevin Decker

        <rdar://problem/6712063> Garmin WebUpdater crashes

        * WebView/WebFrame.mm:
        (-[WebFrame _loadData:MIMEType:textEncodingName:baseURL:unreachableURL:]):  If not called on the main thread,
          add a ThreadViolationCheckRoundTwo() call to either log or raise an exception.  In the case where it's
          only a log, reschedule the _loadData call to occur on the main thread.

2009-04-10  Dan Bernstein  <mitz@apple.com>

        Reviewed by Jon Honeycutt.

        - fix <rdar://problem/6752340> Light blue-green background in content
          area in Mail

        * WebView/WebView.mm:
        (-[WebView _commonInitializationWithFrameName:groupName:usesDocumentViews:]):
        Use device white, rather than calibrated white, as the default
        background color.

2009-04-10  Darin Adler  <darin@apple.com>

        Reviewed by Brady Eidson.
